# python-skeleton

./: .gitignore  .style.yapf  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: app.yml
scripts/: add-dependency.sh  insert_template.py  local-setup.sh
scripts/templates/: incorrect_value_error_template.py  required_value_error_template.py  string_value_object_template.py  uuid_template.py  value_object_template.py
scripts/tests/: integration.sh  unit.sh
src/contexts/shared/domain/exceptions/: incorrect_value_type_error.py  required_value_error.py
src/contexts/shared/domain/value_objects/: string_value_object.py  uuid.py  value_object.py
